@@ -18,7 +18,7 @@ Table of Content
 i-MSCP Version:  <version>
 Maintainer:      i-MSCP Team
 Homepage:        http://i-mscp.net
-Distros:         Ubuntu Lucid, Precise (recommended), Quantal, Raring, Saucy, Trusty
+Distros:         Ubuntu Lucid, Precise (recommended), Trusty, Utopic
 
 2)  Requirements
 ----------------
