@@ -14,6 +14,10 @@ CONFIGS
 	Renamed: hooks.d directory to listeners.d
 	Removed: Roundcube configuration directory ( now shipped with the roundcube package )
 
+DISTROS
+	Added: Support for Ubuntu Utopic Unicorn
+	Removed: Support for obsolete Ubuntu versions ( Quantal Quetzal, Raring Ringtail, Saucy Salamander )
+
 DOCS
 	Updated: INSTALL files
 
